# leadlight

./: Cargo.toml  README.md  airwindows_notes.md  notes.md  todo.md
.cargo/: config
benches/: Cargo.toml  mute_benchmark.rs
benches/benches/: plugin_benchmarks.rs
notes/: T2_break_notes.md  Thesis B VST3 Rust Research Notes.docx  airwindows_biquad_plus_notes.md  airwindows_lowpass_notes.md  airwindows_notes.md  baxndall_notes.md  dstbook_notes.md  general_dap_notes.md  repo_setup_notes.md  rust_vst_notes.md  scientist_engineer_guide_to_dsp.md
notices/: README.md
plugin-lowpass/: Cargo.toml  README.md
plugin-lowpass/src/: lib.rs  process.rs
plugin-mute/: Cargo.toml
plugin-mute/src/: lib.rs  process.rs
plugin-utils/: Cargo.toml
plugin-utils/src/: lib.rs
src/: lib.rs  main.rs  utils.rs
xtask/: README.md
